# desafio-tecnico-condoconta-backend

./: .env.example  LICENSE  README.md  pyproject.toml  run.py
condo_conta/config/: envs.py
condo_conta/rest/: app.py  routes.py
db/: create.sql
db/migrations/: 376af0ed7f9f_downgrades.sql  376af0ed7f9f_upgrades.sql  env.py
db/migrations/versions/: 376af0ed7f9f_insert_initial_data.py  7cfbf1ece3e7_create_initial_tables.py  7cfbf1ece3e7_downgrades.sql  7cfbf1ece3e7_upgrades.sql
